--- a/src/pages/main/page.html
+++ b/src/pages/main/page.html
@@ -55,7 +55,7 @@
           <div class="reg-fullscreenpopup-content">
             <div class="reg-fullscreenpopup-close">Закрыть</div>
             <h2>Новый участник</h2>
-            <input class="reg-fullscreenpopup-field reg-fullscreenpopup-tag ui-input" type="text" placeholder="Tag">
+            <input class="reg-fullscreenpopup-field reg-fullscreenpopup-uid ui-input" type="text" placeholder="Tag">
             <input class="reg-fullscreenpopup-field reg-fullscreenpopup-firstname ui-input" type="text" placeholder="Имя">
             <input class="reg-fullscreenpopup-field reg-fullscreenpopup-lastname ui-input" type="text" placeholder="Фамилия">
             <button class="reg-fullscreenpopup-submit ui-button">Добавить</button>
@@ -64,5 +64,7 @@
 
       </div>
     </body>
-    <script src="./scripts/portable-reader-events.js"></script>
+    <script src="./scripts/ui-events.js"></script>
+
+    <script src="./scripts/renderer-events.js"></script>
   </html>
