--- a/src/index.html
+++ b/src/index.html
@@ -67,13 +67,12 @@
     <script>
      const { ipcRenderer } = require('electron');
 
-     const smartbannerComponent = require('./components/smartbanner');
-     const raceComponents = require('./components/race');
-     const usersComponent = require('./components/users');
-     const regPopupComponent = require('./components/reg-popup');
+     const smartbannerComponent = require('./view-components/smartbanner');
+     const raceComponents = require('./view-components/race');
+     const usersComponent = require('./view-components/users');
+     const regPopupComponent = require('./view-components/reg-popup');
      
-    
-     const dispatcher = {
+     const windowDispatcher = {
       sendRendererEvent(type, data) {
         ipcRenderer.send(type, data);
       },
@@ -82,11 +81,11 @@
       }
      };
 
-     smartbannerComponent(smarbanner, dispatcher);
+     smartbannerComponent(smarbanner, windowDispatcher);
      raceComponents(race);
      usersComponent(users);
-     regPopupComponent(regPopup, dispatcher);
+     regPopupComponent(regPopup, windowDispatcher);
 
-     const fakeTag = () => dispatcher.sendRendererEvent('fakeTag');
+     const fakeTag = () => windowDispatcher.sendRendererEvent('fakeTag');
     </script>
   </html>
