Update readme, reader statuses, graceful exit service and etc..

--- a/src/index.html
+++ b/src/index.html
@@ -17,16 +17,19 @@
 
         <header id="smarbanner" class="smartbanner ui-block">
           <div class="smartbanner-readers">
-            <div class="smartbanner-reader smartbanner-portablereader">
-              <span class="smartbanner-reader-title">Portable reader:</span>
-              <span class="smartbanner-reader-status"></span>
-              <div class="smartbanner-reader-signal"></div>
-            </div>
+
             <div class="smartbanner-reader smartbanner-mainreader">
-              <span class="smartbanner-reader-title">Main reader:</span>
-              <span class="smartbanner-reader-status"></span>
-              <div class="smartbanner-reader-signal"></div>
+              <div class="smartbanner-reader-status smartbanner-reader-disabled"></div>
+              <span class="smartbanner-reader-title">Главный считыватель</span>
+              <button class="reader-button">Кнопка</button>
             </div>
+
+            <div class="smartbanner-reader smartbanner-portablereader">
+              <div class="smartbanner-reader-status smartbanner-reader-disabled"></div>
+              <span class="smartbanner-reader-title">Портативный считыватель</span>
+              <button class="reader-button">Кнопка</button>
+            </div>
+
           </div>
         </header>
 
@@ -59,14 +62,9 @@
             <input class="reg-fullscreenpopup-field reg-fullscreenpopup-firstname ui-input" type="text" placeholder="Имя">
             <input class="reg-fullscreenpopup-field reg-fullscreenpopup-lastname ui-input" type="text" placeholder="Фамилия">
             <button class="reg-fullscreenpopup-submit ui-button">Добавить</button>
+            <button>todo disable portable reader</button>
           </div>
         </div>
-
-<!--    TODO // enable/disable reader listening -->
-        <footer>
-          <button>PortableReaderOn</button>
-          <button>MainReaderOn</button>
-        </footer>
 
       </div>
     </body>
