add ESC ENTER script, fix css

--- a/src/index.html
+++ b/src/index.html
@@ -19,15 +19,17 @@
           <div class="smartbanner-readers">
 
             <div class="smartbanner-reader smartbanner-mainreader">
-              <div class="smartbanner-reader-status smartbanner-reader-disabled"></div>
+              <div class="main-button">
+                <div class="smartbanner-reader-status smartbanner-reader-disabled"></div>
               <span class="smartbanner-reader-title">Главный считыватель</span>
-              <button class="reader-button">Кнопка</button>
+              </div>
             </div>
 
             <div class="smartbanner-reader smartbanner-portablereader">
-              <div class="smartbanner-reader-status smartbanner-reader-disabled"></div>
+              <div class="portab-button">
+                <div class="smartbanner-reader-status smartbanner-reader-disabled"></div>
               <span class="smartbanner-reader-title">Портативный считыватель</span>
-              <button class="reader-button">Кнопка</button>
+              </div>
             </div>
 
           </div>
