css and modal fix

--- a/src/index.html
+++ b/src/index.html
@@ -19,14 +19,14 @@
           <div class="smartbanner-readers">
 
             <div class="smartbanner-reader smartbanner-mainreader">
-              <div class="main-button">
+              <div class="smartbanner-mainreader-button">
                 <div class="smartbanner-reader-status smartbanner-reader-disabled"></div>
               <span class="smartbanner-reader-title">Главный считыватель</span>
               </div>
             </div>
 
             <div class="smartbanner-reader smartbanner-portablereader">
-              <div class="portab-button">
+              <div class="smarbanner-portablereader-button">
                 <div class="smartbanner-reader-status smartbanner-reader-disabled"></div>
               <span class="smartbanner-reader-title">Портативный считыватель</span>
               </div>
