something is wrong

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,13 @@
             <input class="reg-fullscreenpopup-field reg-fullscreenpopup-firstname ui-input" type="text" placeholder="Имя">
             <input class="reg-fullscreenpopup-field reg-fullscreenpopup-lastname ui-input" type="text" placeholder="Фамилия">
             <button class="reg-fullscreenpopup-submit ui-button">Добавить</button>
-            <button>todo disable portable reader</button>
+            <!-- ll -->
+            <div class="popup-reader popup-portablereader">
+              <div class="popup-portablereader-button">
+                <div class="popup-reader-status popup-reader-disabled"></div>
+                <span class="popup-reader-title">Портативный считыватель</span>
+              </div>
+            </div>
           </div>
         </div>
 
