--- a/src/index.html
+++ b/src/index.html
@@ -64,12 +64,7 @@
             <input class="reg-fullscreenpopup-field reg-fullscreenpopup-firstname ui-input" type="text" placeholder="Имя">
             <input class="reg-fullscreenpopup-field reg-fullscreenpopup-lastname ui-input" type="text" placeholder="Фамилия">
             <button class="reg-fullscreenpopup-submit ui-button">Добавить</button>
-            <!-- ll -->
-            <div class="popup-reader popup-portablereader">
-              <div class="popup-portablereader-button">
-                <span class="popup-reader-title">Портативный считыватель</span>
-              </div>
-            </div>
+            <span class="popup-portablereader-button">Вкл\Откл портативный считыватель</span>
           </div>
         </div>
       </div>
