Update race handling, add humanreadable time

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
             <table>
                 <tr class="race-header">
                     <th class="race-row-name">Имя</th>
-                    <th class="row-row-time">Общее время</th>
+                    <th class="row-row-time">Время</th>
                 </tr>
             </table>
           </div>
