Fix reg-popup fuck up

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
                 </div>
             </div>
 
-            <div id="rssi" class="ui-block">
+            <div id="rssi" class="rssi ui-block">
                 <div class="rssi-level"></div>
                 <div id="histogram"></div>
             </div>
