Add miltiply trace to graph

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
             </div>
 
             <div id="rssi" class="rssi ui-block">
-                <div class="rssi-level"></div>
+                <div class="rssi-close">Закрыть</div>
                 <div id="histogram"></div>
             </div>
 
