Add results tab

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,10 @@
 
         <link rel="stylesheet" type="text/css" href="./styles/smartbanner.css">
         <link rel="stylesheet" type="text/css" href="./styles/race.css">
+
+        <link rel="stylesheet" type="text/css" href="./styles/results.css">
         <link rel="stylesheet" type="text/css" href="./styles/users.css">
+
         <link rel="stylesheet" type="text/css" href="./styles/rssi.css">
 
         <link rel="stylesheet" type="text/css" href="./styles/reg-fullscreenpopup.css">
@@ -49,15 +52,37 @@
                     </table>
                 </div>
 
-                <div id="users" class="users ui-block">
-                    <table>
-                       <tr class="users-header">
-                          <th class="users-row-name">Имя</th>
-                          <th class="users-row-best-time">Лучшее время</th>
-                          <th class="users-row-best-count">Всего заездов</th>
-                       </tr>
-                    </table>
+                <div id="results" class="results">
+                    <div class="result-tabs">
+                        <div class="result-tab result-tab-history result-tab-selected">История</div>
+                        <div class="result-tab result-tab-users">Общие</div>
+                        <div class="result-tab result-tab-users">Участники</div>
+                    </div>
+
+                    <div class="results-view ui-block">
+
+                    </div>
+
+                    <!-- <div id="history" class="history">
+                        <table>
+                           <tr class="history-header">
+                              <th class="history-row-name">Имя</th>
+                              <th class="history-row-time">Время</th>
+                           </tr>
+                        </table>
+                    </div>
+
+                    <div id="users" class="users">
+                        <table>
+                           <tr class="users-header">
+                              <th class="users-row-name">Имя</th>
+                              <th class="users-row-best-time">Лучшее время</th>
+                              <th class="users-row-best-count">Всего заездов</th>
+                           </tr>
+                        </table>
+                    </div> -->
                 </div>
+
             </main>
 
             <div id="regPopup" class="reg-fullscreenpopup">
@@ -79,7 +104,7 @@
 
          const smartbannerComponent = require('./view/components/smartbanner');
          const raceComponents = require('./view/components/race');
-         const usersComponent = require('./view/components/users');
+         const resultsComponent = require('./view/components/results/results');
          const regPopupComponent = require('./view/components/reg-popup');
          const rssiComponent = require('./view/components/rssi');
 
@@ -94,12 +119,14 @@
 
          smartbannerComponent(smarbanner, windowDispatcher);
          raceComponents(race, windowDispatcher);
-         usersComponent(users, windowDispatcher);
+         resultsComponent(results, windowDispatcher);
          regPopupComponent(regPopup, windowDispatcher);
          rssiComponent(rssi, windowDispatcher);
 
-         const fakePortableTag = uid => windowDispatcher.sendRendererEvent('fakePortableTag', uid);
-         const fakeMainTag = uid => windowDispatcher.sendRendererEvent('fakeMainTag', uid);
+         const fakePortableTag = (uid, rssi) =>
+           windowDispatcher.sendRendererEvent('fakePortableTag', { uid, rssi });
+         const fakeMainTag = (uid, rssi) =>
+           windowDispatcher.sendRendererEvent('fakeMainTag', { uid, rssi});
 
          document.addEventListener('DOMContentLoaded', () => {
             windowDispatcher.sendRendererEvent('onViewReady');
