Add tabs, migrate users to totalinfo

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,10 @@
         <link rel="stylesheet" type="text/css" href="./styles/smartbanner.css">
         <link rel="stylesheet" type="text/css" href="./styles/race.css">
 
-        <link rel="stylesheet" type="text/css" href="./styles/results.css">
-        <link rel="stylesheet" type="text/css" href="./styles/users.css">
+        <link rel="stylesheet" type="text/css" href="./styles/results/results.css">
+        <link rel="stylesheet" type="text/css" href="./styles/results/history.css">
+        <link rel="stylesheet" type="text/css" href="./styles/results/total.css">
+        <link rel="stylesheet" type="text/css" href="./styles/results/users.css">
 
         <link rel="stylesheet" type="text/css" href="./styles/rssi.css">
 
@@ -54,35 +56,44 @@
 
                 <div id="results" class="results">
                     <div class="result-tabs">
-                        <div class="result-tab result-tab-history result-tab-selected">История</div>
-                        <div class="result-tab result-tab-users">Общие</div>
-                        <div class="result-tab result-tab-users">Участники</div>
+                        <div id="tab-history" class="result-tab result-tab-selected">История</div>
+                        <div id="tab-total" class="result-tab">Итого</div>
+                        <div id="tab-users" class="result-tab">Участники</div>
                     </div>
-
                     <div class="results-view ui-block">
 
-                    </div>
+                        <div id="history" class="history">
+                            <table>
+                                <tr class="history-header">
+                                    <th class="history-row-name">Имя</th>
+                                    <th class="history-row-time">Время</th>
+                                </tr>
+                            </table>
+                        </div>
 
-                    <!-- <div id="history" class="history">
-                        <table>
-                           <tr class="history-header">
-                              <th class="history-row-name">Имя</th>
-                              <th class="history-row-time">Время</th>
-                           </tr>
-                        </table>
-                    </div>
 
-                    <div id="users" class="users">
-                        <table>
-                           <tr class="users-header">
-                              <th class="users-row-name">Имя</th>
-                              <th class="users-row-best-time">Лучшее время</th>
-                              <th class="users-row-best-count">Всего заездов</th>
-                           </tr>
-                        </table>
-                    </div> -->
+                        <div id="total" class="total">
+                            <table>
+                                <tr class="total-header">
+                                    <th class="total-row-name">Имя</th>
+                                    <th class="total-row-best-time">Лучшее время</th>
+                                    <th class="total-row-best-count">Всего заездов</th>
+                                </tr>
+                            </table>
+                        </div>
+
+                        <div id="users" class="users">
+                            <table>
+                                <tr class="users-header">
+                                    <th class="users-row-name">Имя</th>
+                                    <th class="users-row-best-time">Лучшее время</th>
+                                    <th class="users-row-best-count">Всего заездов</th>
+                                </tr>
+                            </table>
+                        </div>
+
+                    </div>
                 </div>
-
             </main>
 
             <div id="regPopup" class="reg-fullscreenpopup">
@@ -123,9 +134,9 @@
          regPopupComponent(regPopup, windowDispatcher);
          rssiComponent(rssi, windowDispatcher);
 
-         const fakePortableTag = (uid, rssi) =>
+         window.fakePortableTag = (uid, rssi) =>
            windowDispatcher.sendRendererEvent('fakePortableTag', { uid, rssi });
-         const fakeMainTag = (uid, rssi) =>
+         window.fakeMainTag = (uid, rssi) =>
            windowDispatcher.sendRendererEvent('fakeMainTag', { uid, rssi});
 
          document.addEventListener('DOMContentLoaded', () => {
