Add filter, some css and improves to race history

--- a/src/index.html
+++ b/src/index.html
@@ -63,10 +63,13 @@
                     <div class="results-view ui-block">
 
                         <div id="history" class="history">
+                            <input class="history-filter-name ui-input" placeholder="Фильтр:Имя">
                             <table>
                                 <tr class="history-header">
+                                    <th class="history-row-id">N</th>
                                     <th class="history-row-name">Имя</th>
                                     <th class="history-row-time">Время</th>
+                                    <th class="history-row-name">Дата</th>
                                 </tr>
                             </table>
                         </div>
