Add delete button to race-history and create delete-event

--- a/src/index.html
+++ b/src/index.html
@@ -3,20 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <title>RTS</title>
-        <link rel="stylesheet" type="text/css" href="./styles/base.css">
-        <link rel="stylesheet" type="text/css" href="./styles/ui.css">
+        <link rel="stylesheet" type="text/css" href="./view/styles/base.css">
+        <link rel="stylesheet" type="text/css" href="./view/styles/ui.css">
 
-        <link rel="stylesheet" type="text/css" href="./styles/smartbanner.css">
-        <link rel="stylesheet" type="text/css" href="./styles/race.css">
+        <link rel="stylesheet" type="text/css" href="./view/styles/smartbanner.css">
+        <link rel="stylesheet" type="text/css" href="./view/styles/race.css">
 
-        <link rel="stylesheet" type="text/css" href="./styles/results/results.css">
-        <link rel="stylesheet" type="text/css" href="./styles/results/history.css">
-        <link rel="stylesheet" type="text/css" href="./styles/results/total.css">
-        <link rel="stylesheet" type="text/css" href="./styles/results/users.css">
+        <link rel="stylesheet" type="text/css" href="./view/styles/results/results.css">
+        <link rel="stylesheet" type="text/css" href="./view/styles/results/history.css">
+        <link rel="stylesheet" type="text/css" href="./view/styles/results/total.css">
+        <link rel="stylesheet" type="text/css" href="./view/styles/results/users.css">
 
-        <link rel="stylesheet" type="text/css" href="./styles/rssi.css">
+        <link rel="stylesheet" type="text/css" href="./view/styles/rssi.css">
 
-        <link rel="stylesheet" type="text/css" href="./styles/reg-fullscreenpopup.css">
+        <link rel="stylesheet" type="text/css" href="./view/styles/reg-fullscreenpopup.css">
     </head>
     <body>
         <div class="content">
